fixed adaptive on small screen

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -16,10 +16,11 @@
 
   @media (max-width: 960px) {
     padding: 50px;
+    height: 600px;
   }
 
-  @media (max-width: 960px) {
-    height: 600px;
+  @media (max-width: 360px) {
+    padding: 10px;
   }
 
   &__top {
@@ -104,6 +105,9 @@
 
     @media (max-width: 768px) {
       margin: 0 auto;
+    }
+    @media (max-width: 360px) {
+      text-align: center;
     }
   }
 
