--- a/src/styles/_motivation.scss
+++ b/src/styles/_motivation.scss
@@ -6,7 +6,8 @@
   background-color: #fff;
 
   @media (max-width: 375px) {
-    padding: 200px 10px 0;
+    padding: 64px 10px 0;
+    top: 150px;
   }
 
   &__text {
