--- a/src/styles/_process.scss
+++ b/src/styles/_process.scss
@@ -23,6 +23,10 @@
     margin: 0 32px 32px 0;
     max-width: 362px;
 
+    @media (max-width: 960px) {
+      margin: 0 auto 32px;
+    }
+
     @media (max-width: 375px) {
       text-align: center;
     }
